kubernetes/clusters/home/media/packetsandpods/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: packetsandpods
  namespace: media

  labels:
    app: packetsandpods

spec:
  replicas: 1

  selector:
    matchLabels:
      app: packetsandpods

  template:
    metadata:
      labels:
        app: packetsandpods

    spec:
      containers:
        - name: packetsandpods
          image: ghcr.io/jgrove90/packets-and-pods:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 30
